packages/portal-style/src/components/_forms.scss
::placeholder {
  color: $grey;
}

.form-group {
  margin-bottom: 20px;
  position: relative;

  textarea {
    min-height: 150px;
    padding: 15px;
  }

  .form-text {
    font-size: 12px;
    color: $grey-dark;
  }

  label {
    font-size: $s15;
    font-weight: 700;
    color: $text-color;
    margin: 0 0 10px;
    display: block;
  }

  .checkboxes,
  .radios {
    &:focus-within {
      border-color: $brand-primary;
    }

    label {
      cursor: pointer;
      display: inline-block;

      &>input {
        opacity: 0;
        position: absolute;

        &+i {
          background-color: #fff;
          border: 2px solid $grey-light;
          border-radius: 4px;
          display: inline-block;
          height: 16px;
          margin-right: 3px;
          position: relative;
          top: 2px;
          width: 16px;

          &::after {
            background: transparent;
            border: 2px solid $brand-primary;
            border-right: none;
            border-top: none;
            box-sizing: border-box;
            content: "";
            height: 6px;
            left: 1px;
            opacity: 0;
            position: absolute;
            top: 2px;
            transform: rotate(-60deg);
            width: 11px;
          }
        }

        &:focus+i {
          border-color: $grey-dark;
        }

        &:checked+i::after {
          opacity: 1 !important;
          transition: 0.2s;
        }

        &:disabled+i {
          border-color: $grey-light;
        }
      }

      span.label {
        margin-left: 5px;
        margin-right: 20px;
      }
    }
  }

  .radios {

    label>input {

      &+i {
        border-radius: 50%;
        border: 1px solid $grey-dark;

        &::after {
          background-color: $brand-primary;
          border: none;
          border-radius: 50%;
          height: 0;
          left: 50%;
          opacity: 1;
          top: 50%;
          width: 0;
        }
      }

      &:checked+i::after {
        height: 8px;
        left: 3px;
        top: 3px;
        width: 8px;
      }
    }
    label>input:focus {
      &+i {
        border: 2px solid $grey-dark;
      }
      &:checked+i::after {
        height: 8px;
        left: 2px;
        top: 2px;
        width: 8px;
      }
    }
  }
  .dp-pc_file-upload {
    padding: 0;
  }
}

.form-control {
  background: $grey-lightest;
  border: 2px solid $grey-light;
  border-radius: 4px;
  height: auto;
  padding: 7px 15px 6px;

  &:focus,
  &.focused {
    background: $grey-lightest;
    border-color: $brand-primary;
    box-shadow: none;
  }

  &.form-success {
    border-color: $success;
  }

  &.form-error {
    border-color: $danger;
  }
}

select.form-control:not([multiple="multiple"]) {
  appearance: none;

  &,
  &:focus {
    //background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20320%20512%22%3E%3Cpath%20d%3D%22M151.5%20347.8L3.5%20201c-4.7-4.7-4.7-12.3%200-17l19.8-19.8c4.7-4.7%2012.3-4.7%2017%200L160%20282.7l119.7-118.5c4.7-4.7%2012.3-4.7%2017%200l19.8%2019.8c4.7%204.7%204.7%2012.3%200%2017l-148%20146.8c-4.7%204.7-12.3%204.7-17%200z%22%2F%3E%3C%2Fsvg%3E");
    //background-position: right 0.7em top 50%;
    //background-repeat: no-repeat;
    //background-size: 0.65em auto;
  }

  & option:disabled {
    color: $grey-lightest;
  }

  &+i {
    position: absolute;
    top: 38px;
    right: 15px;

    & svg {
      fill: $brand-primary;
      color: $brand-primary;
    }
  }
}

.react-select {
  .react-select__control {
    padding-top: 0;
    height: 45px;
    width: 100%;
    margin-left: 0;

    .react-select__single-value {
      color: #495057;
    }
    .react-select__multi-value {
      margin-top: 2px;
    }
    .react-select__input > input {
      margin-top: 0;
    }
  }
  .react-select__menu {
    z-index: 3000;
  }
}

.dp-po-form-check,
.dp-po-form-check-compact {
  padding: 0;

  label {
    position: relative;
    margin: 0;
    padding: 0 0 0 30px;
    line-height: 21px;
    display: inline-block;
    font-weight: normal;
    cursor: pointer;

    &:before {
      background-color: $grey-lightest;
      border: 1px solid $grey-light;
      content: "";
      display: block;
      height: 20px;
      left: 0;
      position: absolute;
      top: 0;
      width: 20px;
      border-radius: 4px;
    }

    &:after {
      content: "";
      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.21 4.81a.602.602 0 0 1 0-.751l.097-.112a.423.423 0 0 1 .65 0l1.688 1.95 4.43-5.12a.423.423 0 0 1 .65 0l.097.112a.602.602 0 0 1 0 .752L2.645 7.625.21 4.811z' fill='%233a8dde'/%3E%3C/svg%3E");
      background-position: center;
      background-repeat: no-repeat;
      background-size: 11px auto;
      width: 20px;
      height: 20px;
      display: block;
      left: 0;
      opacity: 0;
      position: absolute;
      top: 0;
      color: $brand-primary;
    }

    img {
      width: 22px;
      height: 22px;
      border-radius: 50%;
      position: relative;
      top: -2px;
      margin-right: 3px;
    }
  }

  input[type="checkbox"] {
    height: 0;
    opacity: 0;
    position: absolute;
    width: 0;

    &:checked {
      &+label:after {
        opacity: 1;
      }
    }
  }
}

.dp-po-form-check-compact {
  label {
    line-height: 15px;
    padding: 0 0 0 25px;
    color: $grey-dark;

    &:before {
      height: 14px;
      width: 14px;
      border-radius: 0;
      border: 1px solid $grey;
    }

    &:after {
      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='11' height='10' viewBox='0 0 11 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.318604 5.9257C0.0812988 5.65139 0.0812988 5.18506 0.318604 4.91075L0.449121 4.75988C0.686426 4.48557 1.08984 4.48557 1.32715 4.75988L3.60527 7.39326L9.58535 0.480635C9.82266 0.206325 10.2261 0.206325 10.4634 0.480635L10.5939 0.631506C10.8312 0.905817 10.8312 1.37214 10.5939 1.64646L3.60527 9.7249L0.318604 5.9257Z' fill='white'/%3E%3C/svg%3E");
      color: $white;
      width: 14px;
      height: 14px;
    }
  }

  input[type="checkbox"] {
    &:checked {
      &+label:before {
        border-color: $brand-primary;
        background-color: $brand-primary;
      }
    }
  }
}

.dp-po-form-upload {
  &-wrap {
    display: inline-flex;
    align-items: center;
    padding: 20px;
    border: 2px dashed $grey-light;
    border-radius: 3px;
    cursor: pointer;
    flex-wrap: wrap;

    &:hover {
      border-color: $brand-primary;

      .dp-po-drag {
        color: $brand-primary;
      }
    }

    &>span {
      color: $grey-dark;
      font-size: 12px;
      margin: 0 15px;
    }

    .dp-po-drag {
      display: flex;
      align-items: center;
      color: $grey-dark;

      .dp-po-icon {
        margin: 0 10px 0 0;
      }
    }
  }

  &-avatar {
    display: inline-block;
    margin-right: 20px;

    &-image {
      width: 128px;
    }

    &-placehodler {
      margin: 0;
      margin-right: 20px;
      width: 128px;
      height: 128px;
      border-radius: 50%;
      background: $grey-lightest;
      border: 1px solid $grey;
      font-size: 15px;
      color: $grey-dark;
      display: inline-flex;
      align-items: center;
      justify-content: center;
    }
  }
}

.dp-po-form-captcha {
  &-text {
    border: 2px dashed $grey-light;
    width: 100%;
    height: 40px;
    border-radius: 4px;
  }
}

.dp-po-form-btntext {
  color: $text-color;
  font-size: $p4-font-size;
  display: table;
  margin-top: 10px;

  &:hover {
    text-decoration: none;
    color: $brand-primary;
  }
}

.dp-po-form-password {
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  border: 1px solid $brand-primary;
  padding: 20px;
  display: inline-block;
  position: absolute;
  background: $white;
  bottom: 0;
  z-index: 1;
  transform: translateY(100%);

  &-title {
    @include typo($s17, 500, 'head');
    color: $grey-dark;
    margin: 0 0 10px;
  }

  &-list {
    margin: 0;
    padding: 0;
  }

  &-item {
    display: flex;
    align-items: center;
    color: $grey-dark;
    margin-bottom: 10px;

    &:last-child {
      margin: 0;
    }
  }

  .dp-po-icon {
    color: $success;
    margin-right: 10px;
  }
}

.field_more_attachments {
  display: none;
}

